--- a/src/app/views/corporate/corporate.component.html
+++ b/src/app/views/corporate/corporate.component.html
@@ -4,8 +4,11 @@
     <div class="container">
         <!-- Left Section with Background -->
         <div class="left-section">
-          <div class="overlay"></div>
+          <div class="overlay"></div>        
           <div class="content">
+            <hr>
+            <p>Are you an individual business traveller? Book through Oravel Travel Solutions.</p>
+            <hr>
             <h1>Unlock special prizes for your startup exclusively with Oravel Travel Solutions.</h1>
             <p>Save up to 70% | Get a dedicated Oravel Travel Manager | Fixed Price throughout the year.</p>
             <button class="help-button">Need help? Connect with your dedicated support manager</button>
