--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -82,6 +82,16 @@
     </div>
     
   </form>
+  <div class="row travel-categories">  
+    <div class="col category-item">   
+      <a routerLink="/TravelAgent" target="_blank">Travel Agent <span class="arrow">></span></a>
+    </div>
+    <div class="col category-item">
+      <a routerLink="/TravelAgent" target="_blank">Corporate  <span class="arrow">></span></a>
+     </div>
+  </div>
+  
+  
 </div>
 
       </div>
