--- a/src/app/views/privacy-policy/privacy-policy.component.html
+++ b/src/app/views/privacy-policy/privacy-policy.component.html
@@ -2,7 +2,7 @@
 <section id="section">
 <div class="container">
     <h1 style="text-align: center;font-size: larger;">Privacy Policy</h1>
-    <p style="float:right"><strong>Last updated:</strong> [Insert Date]</p>
+    <p style="float:right"><strong>Last updated:</strong> 01-01-2025</p>
 <br>
     <p>Cubino is committed to protecting your information. This privacy notice provides details about the information we collect about you, how we use it, and how we protect it. It also explains your rights and how to contact us if you have questions about how we use your information.</p>
 
