--- a/src/app/views/privacy-policy/privacy-policy.component.scss
+++ b/src/app/views/privacy-policy/privacy-policy.component.scss
@@ -30,7 +30,7 @@ p{
     font-family: 'inter' !important;
 }
 #section{
-    background-color: #000 !important;
+    background-color: #ffffff !important;
     padding-top: 50px;
     padding-bottom: 50px;
 }
