--- a/src/app/views/terms/terms.component.html
+++ b/src/app/views/terms/terms.component.html
@@ -2,7 +2,7 @@
 <section id="section">
 <div class="container">
     <h1>Terms and Conditions for Hotel Bookings</h1>
-    <p><em>Last Updated: [Insert Date]</em></p>
+    <p><em>Last Updated: 01-01-2025</em></p>
 
     <h2>1. Definitions</h2>
     <ul>
