--- a/src/app/views/terms/terms.component.scss
+++ b/src/app/views/terms/terms.component.scss
@@ -29,7 +29,7 @@ ul {
     margin-top: 20px;
 }
 #section{
-    background-color: #000 !important;
+    background-color: #f5f3f3 !important;
     padding-top: 50px;
     padding-bottom: 50px;
 }
