--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -44,26 +44,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 offset-lg-1 col-md-5 offset-md-1 col-sm-6">
+                <div class="col-lg-5 offset-lg-1 col-md-7 offset-md-1 col-sm-6">
                     <div class="footer__widget">
                         <h4>Quick Link</h4>
                         <ul>
-                            <li><a routerLink="">Home</a></li>
-                            <li><a href="#">Booking</a></li>
-                            <li><a routerLink="/about">About Us</a></li>
-                            <li><a href="#">Review</a></li>
-                            <li><a routerLink="/contact">Contact</a></li>
+                            <li><a routerLink="">{{'home'|translate}}</a></li>
+                            <li><a routerLink="/about">{{'about'|translate}}</a></li>
+                            <li><a routerLink="/contact">{{'contact'|translate}}</a></li>
+                            <li><a routerLink="/member">{{'Become a Member'|translate}}</a></li> 
+                            <!-- <li><a href="#">Booking</a></li>
+                               
+                            <li><a href="#">Review</a></li> -->
+                           
                         </ul>
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Our Room</a></li>
-                            <li><a href="#">Restaurants</a></li>
-                            <li><a href="#">Payments</a></li>
-                            <li><a href="#">Events</a></li>
+                            <li><a routerLink="/privacy-policy">{{'Privacy Policy'|translate}}</a></li>
+                            <li><a routerLink="/hotels">Our Room</a></li>
+                            <li><a routerLink="/terms-conditions">{{'Terms and Conditions'|translate}}</a></li>
+
+                            <!-- <li><a href="#">Payments</a></li>
+                            <li><a href="#">Events</a></li> -->
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-8 col-sm-12">
+                <div class="col-lg-3 col-md-5 col-sm-12">
                     <div class="footer__newslatter">
                        
                         <div class="footer__newslatter__find">
@@ -90,8 +94,9 @@
                 </div>
                 <div class="col-lg-5 col-md-5">
                     <ul class="footer__copyright__links">
-                        <li><a routerLink="/terms-conditions">Terms Of Use</a></li>
-                        <li><a routerLink="/privacy-policy">Privacy Policy</a></li>
+                        <li><a routerLink="/terms-conditions">{{'Terms and Conditions'|translate}}</a></li>
+                        <li><a routerLink="/privacy-policy">{{'Privacy Policy'|translate}}</a></li>
+                              <li><a routerLink="/member">{{'Become a Member'|translate}}</a></li> 
                     </ul>
                 </div>
             </div>
