--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,23 +1,34 @@
 <div class="offcanvas-menu-wrapper" [class.active]="isMenuOpen">
     <div class="offcanvas__close" (click)="toggleMenu()" style="color: #fff; float: right; border-radius: 20px; border: 1px solid #fff; padding: 5px 10px; cursor: pointer;">✖</div>
     <div class="offcanvas__logo">
-        <!-- <a routerLink=" "><img src="assets/img/logo.png" alt=""></a> -->
-    </div> 
+<a routerLink=" "><img src="assets/img/logo1.jpg" alt=""></a>
+    </div>
     <div id="mobile-menu-wrap"></div>
-    <div class="offcanvas__btn__widget" style="margin: 20px 0; text-align: center;">
+
+    <div class="offcanvas__widget">
+        <ul class="menu__class">
+            <li><a routerLink="/home">Home</a></li>
+            <li><a routerLink="/about">About</a></li>    
+            <li><a routerLink="/hotels">Hotels</a></li>
+            <li><a routerLink="/member">Become a Member</a></li>
+            <li><a routerLink="/corporate">Cubino for Business</a></li>
+            <li><a routerLink="/property">List Your Property</a></li>   
+           
+            <li><a routerLink="/contact">Contact</a></li>                                
+        </ul>
+        <!-- <ul>
+            <li><span class="icon_pin_alt"></span> 96 Ernser Vista Suite 437, NY, US</li>
+            <li><span class="icon_phone"></span> (123) 456-78-910</li>
+            <li><span class="icon_mail"></span> info&#64;cubino.com</li>
+        </ul> -->
+    </div>
+    <div class="offcanvas__btn__widget" >
         <a routerLink="/login" class="btn btn-primary">
             <i class="fa fa-sign-in-alt"></i> Login
         </a>
         <a routerLink="/register" class="btn btn-success">
             <i class="fa fa-user-plus"></i> Signup
         </a>
-    </div>
-    <div class="offcanvas__widget">
-        <ul>
-            <li><span class="icon_pin_alt"></span> 96 Ernser Vista Suite 437, NY, US</li>
-            <li><span class="icon_phone"></span> (123) 456-78-910</li>
-            <li><span class="icon_mail"></span>info&#64;cubino.com</li>
-        </ul>
     </div>
 </div>
 <!-- Offcanvas Menu End -->
@@ -49,18 +60,40 @@
                     <div class="header__nav">
                         <nav class="header__menu">
                             <ul class="menu__class">
-                                <li><a routerLink="/member">Become a Member</a></li>
-                                <li><a routerLink="/corporate">Cubino for Business</a></li>
-                                <li><a routerLink="/property">List Your Property</a></li>                                   
+                                <li><a routerLink=" ">{{'home' |translate}}</a></li>
+                                <li><a routerLink="/hotels">{{'hotels'|translate}}</a></li>
+                                <!-- <li><a routerLink="/member">Become a Member</a></li> -->
+                                <li><a routerLink="/corporate">{{'Cubino for Business' |translate}}</a></li>
+                                <li><a routerLink="/property">{{'List Your Property'|translate}}</a></li>                                   
                             </ul>
                         </nav>
                         <div class="header__nav__widget">
-                            <a routerLink="/login" class="btn btn-primary">
-                                <i class="fa fa-sign-in-alt"></i> Login
-                            </a>
-                            <a routerLink="/register" class="btn btn-success">
-                                <i class="fa fa-user-plus"></i> Signup
-                            </a>
+                            @if(loginToken) {
+                                <div class="user-dropdown">
+                                    <div class="user-icon" (click)="toggleUserDropdown()">
+                                        <img src="assets/img/user1.png" alt="User"  />
+                                    </div>
+                                    <ul class="dropdown-menu" [class.show]="isUserDropdownOpen">
+                                        <li><a routerLink="/profile">{{'Profile'|translate}}</a></li>
+                                        <li><a routerLink="/bookings">{{'My Booking'|translate}}</a></li>
+                                        <li><a routerLink="/cancellations">{{'Cancellations'|translate}}</a></li>
+                                        <li><a (click)="logout()" >{{'Logout'|translate}}</a></li>
+                                    </ul>
+                                </div>
+                            }  @else {
+                                <a routerLink="/login" class="btn btn-primary">
+                                    <i class="fa fa-sign-in-alt"></i> {{'login' |translate}}
+                                </a>
+                                <a routerLink="/register" class="btn btn-success">
+                                    <i class="fa fa-user-plus"></i> {{'sign up'|translate}}
+                                </a>
+                            }   
+                            <select name="" id="" class="btn btn-success" (change)="ChangeLang($event)">
+                                <option *ngFor="let lang of  this.translate.getLangs()"  [value]="lang"  [selected]="lang===translate.currentLang">{{lang}}</option>
+                                <!-- <option value="fr">French</option>
+                                <option value="es">Spanish</option> -->
+                            </select>       
+                            
                         </div>
                     </div>
                 </div>
