--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -2,16 +2,16 @@
 
 <app-header></app-header>
     <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option set-bg" data-setbg="assets/img/breadcrumb-bg.jpg">
+    <div class="breadcrumb-option set-bg" id="head" data-setbg="assets/img/breadcrumb-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
                         <h1>About Us</h1>
-                        <div class="breadcrumb__links">
+                        <!-- <div class="breadcrumb__links">
                             <a href="./index.html">Home</a>
                             <span>About Us</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -26,16 +26,16 @@
                     <div class="col-lg-5">
                         <div class="section-title">
                             <h5>Our Specialization</h5>
-                            <h2>Welcome Hiroto</h2>
+                            <h2>Welcome Cubino</h2>
                         </div>
                     </div>
                     <div class="col-lg-7">
                         <div class="about__text">
                             <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
                                 grids.</p>
-                            <p>I am convinced the only way to make money online is to have a consistent Advertising
+                            <!-- <p>I am convinced the only way to make money online is to have a consistent Advertising
                                 plan. A plan you are willing to work hard on and commit to for a selected period of
-                                time. When making this plan, you need to do two things.</p>
+                                time. When making this plan, you need to do two things.:CEO</p> -->
                         </div>
                     </div>
                 </div>
