--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,16 +1,12 @@
 
 <app-header></app-header>
     <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option set-bg" data-setbg="assets/img/breadcrumb-bg.jpg">
+    <div class="breadcrumb-option set-bg"  id="head">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h1>Contact</h1>
-                        <div class="breadcrumb__links">
-                            <a href="./index.html">Home</a>
-                            <span>Contact Us</span>
-                        </div>
+                        <h1>Contact</h1>                        
                     </div>
                 </div>
             </div>
