--- a/src/app/views/hotels-list-details/hotels-list-details.component.html
+++ b/src/app/views/hotels-list-details/hotels-list-details.component.html
@@ -1,100 +1,81 @@
-<!-- Room Details Slider Begin -->
-<div class="room-details-slider">
-    <div class="container">
-      <div class="room__details__pic__slider owl-carousel">
-        <div class="room__details__pic__slider__item set-bg" [ngStyle]="{'background-image': 'url(assets/img/hotel1.jpg)'}"></div>
-        <div class="room__details__pic__slider__item set-bg" [ngStyle]="{'background-image': 'url(assets/img/hotel6.jpg)'}"></div>
-        <div class="room__details__pic__slider__item set-bg" [ngStyle]="{'background-image': 'url(assets/img/hotel7.jpg)'}"></div>
-        <div class="room__details__pic__slider__item set-bg" [ngStyle]="{'background-image': 'url(assets/img/hotel6.jpg)'}"></div>
-      </div>
-    </div>
-  </div>
-  <!-- Room Details Slider End -->
+<app-header1></app-header1>
+<!-- Hotel Details Section -->
+<section id="hotel-section">   
+  <owl-carousel-o [options]="customOptions">
+    <ng-container *ngIf="images">
+      <ng-template carouselSlide *ngFor="let image of parseRoomImages(images)">
+        <img 
+          [src]="'https://cocoalabs.in/Cubino/storage/app/public/' + image" 
+          alt="Room Image" 
+          class="img-fluid"
+        />
+      </ng-template>
+    </ng-container>
+  </owl-carousel-o>
   
-  <!-- Rooms Details Section Begin -->
-  <section class="room-details spad">
-    <div class="container">
+  
+  
+
+  <div class="container">
+    <div class="mt-4">
       <div class="row">
-        <div class="col-lg-12">
-          <div class="room__details__content">
-            <div class="room__details__rating">
-              <div class="room__details__hotel">
-                <span>Hotel</span>
-                <div class="room__details__hotel__rating">
-                  <span class="icon_star"></span>
-                  <span class="icon_star"></span>
-                  <span class="icon_star"></span>
-                  <span class="icon_star"></span>
-                  <span class="icon_star-half_alt"></span>
-                </div>
+        <div class="col-md-8">      
+          <h3>{{roomTitle}}</h3>
+          <p>{{hotelData.hotel_address}}</p>       
+          <p class="rating">
+            <ng-container *ngIf="hotelData.hotel_rating; else notRated">
+              <!-- Display the stars -->
+              <span *ngFor="let star of getStars(hotelData.hotel_rating)">{{ star }}</span>
+            </ng-container>
+            <ng-template #notRated>Not rated</ng-template>
+          </p>
+          <p>{{roomDescription}}</p>
+
+          <!-- Amenities Section -->
+          <div class="mt-4 amenities">
+            <h4>Amenities</h4>
+            <div [innerHTML]="aminities"></div>
+          </div>
+
+          <!-- Hotel Policies Section -->
+          <div class="mt-4  hotel-policies">
+            <h4 class="policies-title">Hotel Policies</h4>
+            <div id="policy" [innerHTML]="hotel_policies" class="policies-content"></div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card p-3">
+            <h4>Price: {{price}}</h4>
+            <p>+ taxes & fees</p>
+            <form>
+              <div class="card">
+                <label for="dates">
+                  <i class="fa fa-calendar"></i>{{ start_date | date:'dd-MM-yyyy' }} - {{ end_date | date:'dd-MM-yyyy' }}
+                </label>
               </div>
-              <div class="room__details__advisor">
-                <img src="assets/img/rooms/details/tripadvisor.png" alt="">
-                <div class="room__details__advisor__rating">
-                  <span class="icon_star"></span>
-                  <span class="icon_star"></span>
-                  <span class="icon_star"></span>
-                  <span class="icon_star"></span>
-                  <span class="icon_star-half_alt"></span>
-                </div>
-                <span class="review">(1000 Reviews)</span>
+              <div class="card">
+                <label for="guests">
+                  <i class="fa fa-user" aria-hidden="true"></i> {{guestCount}} Guest
+                </label>
               </div>
-            </div>
-  
-            <div class="room__details__title">
-              <h2>{{ roomTitle }}</h2>
-              <a href="#" class="primary-btn">Booking Now</a>
-            </div>
-  
-            <div class="room__details__desc">
-              <h2>Description:</h2>
-              <p>{{ roomDescription }}</p>
-            </div>
-  
-            <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="room__details__facilities">
-                  <h2>Other facilities:</h2>
-                  <div class="row">
-                    <div class="col-lg-6">
-                      <ul>
-                        <li *ngFor="let facility of otherFacilities">
-                          <span class="icon_check"></span>{{ facility }}
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-lg-6">
-                      <ul>
-                        <li *ngFor="let facility of additionalFacilities">
-                          <span class="icon_check"></span>{{ facility }}
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
+              <div class="card">
+                <label for="rooms">
+                  <i class="fa fa-building-o" aria-hidden="true"></i> {{roomCount}} Room
+                </label>
               </div>
-  
-              <div class="col-lg-6 col-md-6 col-sm-6">
-                <div class="room__details__more__facilities">
-                  <h2>Most popular facilities:</h2>
-                  <div class="row">
-                    <div class="col-lg-6" *ngFor="let facility of popularFacilities">
-                      <div class="room__details__more__facilities__item">
-                        <div class="icon">
-                          <img [src]="facility.icon" alt="">
-                        </div>
-                        <h6>{{ facility.name }}</h6>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              <div class="card">
+                <label for="room-type">
+                  <i class="fa fa-building" aria-hidden="true"></i> Classic <span class="badge-info">Selected</span>
+                </label>
               </div>
-            </div>
-  
+              <button type="submit" class="btn btn-primary w-100" id="book-button" (click)="submit()">Continue to Book</button>
+            </form>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- Rooms Details Section End -->
-  
+  </div>
+</section>
+<app-footer1></app-footer1>
+
