--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -285,4 +285,72 @@ p{
 
 .submit-btn:hover:not(:disabled) {
   background-color: #232524;
+}/* General row styling */
+.travel-categories {
+  margin-top: 150px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+ // background: linear-gradient(135deg, #f0f4f7, #d9e3ea);
+  border-radius: 12px;
+  //border: 1px solid #cfd8dc;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+
+/* Horizontal rule styling */
+.travel-categories hr {
+  width: 100%;
+  height: 1px;
+  background-color: #bbb;
+  border: none;
+  margin-bottom: 20px;
+}
+
+/* Column styling */
+.category-item {
+  font-family: 'Arial', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: #0c0c0c !important;
+  padding: 10px 15px;
+  text-align: center;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+.category-item a{
+  color:#000;
+}
+.category-item a:hover{
+  color:#fffe;
+}
+/* Arrow style */
+.arrow {
+  font-weight: normal;
+  color: #888;
+  margin-left: 8px;
+  font-size: 16px;
+}
+
+/* Hover effects */
+.category-item:hover {
+  color: #ffffff;
+  background-color: #00796b; /* Modern teal shade */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .travel-categories {
+    flex-direction: column;
+    padding: 10px;
+  }
+
+  .category-item {
+    font-size: 16px;
+    margin: 5px 0;
+    text-align: left;
+  }
 }
